// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`large test: exact mode applies major message and bumps all 1`] = `
Array [
  Object {
    "op": "update",
    "path": Array [
      "mainPackage",
      "version",
    ],
    "val": "5.0.0",
  },
  Object {
    "op": "add",
    "path": Array [
      "mainPackage",
      "rlsr",
      "previouslyUnreleased",
    ],
    "val": Array [
      "one",
      "two",
      "three",
      "four",
      "five",
    ],
  },
  Object {
    "op": "add",
    "path": Array [
      "mainPackage",
      "rlsr",
      "determinedIncrementLevel",
    ],
    "val": 2,
  },
  Object {
    "op": "add",
    "path": Array [
      "mainPackage",
      "rlsr",
      "shouldBeCommitted",
    ],
    "val": Array [],
  },
  Object {
    "op": "delete",
    "path": Array [
      "messages",
      0,
    ],
  },
  Object {
    "op": "update",
    "path": Array [
      "packages",
      "one",
      "version",
    ],
    "val": "5.0.0",
  },
  Object {
    "op": "update",
    "path": Array [
      "packages",
      "one",
      "dependencies",
      "four",
    ],
    "val": "^5.0.0",
  },
  Object {
    "op": "update",
    "path": Array [
      "packages",
      "one",
      "dependencies",
      "five",
    ],
    "val": "^5.0.0",
  },
  Object {
    "op": "add",
    "path": Array [
      "packages",
      "one",
      "rlsr",
    ],
    "val": Object {
      "dependencies": Array [
        "four",
        "five",
      ],
      "determinedIncrementLevel": 2,
      "devDependencies": Array [],
      "devRelations": Array [],
      "hasBump": true,
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [
        Object {
          "affected": Array [
            "four",
          ],
          "body": "BREAKING CHANGE: text ",
          "level": 2,
          "scope": "four",
          "subject": "baz",
          "synchronizedSource": Array [
            "four",
          ],
          "type": "fix",
        },
      ],
      "relations": Array [],
    },
  },
  Object {
    "op": "update",
    "path": Array [
      "packages",
      "two",
      "version",
    ],
    "val": "5.0.0",
  },
  Object {
    "op": "update",
    "path": Array [
      "packages",
      "two",
      "dependencies",
      "three",
    ],
    "val": "^5.0.0",
  },
  Object {
    "op": "add",
    "path": Array [
      "packages",
      "two",
      "rlsr",
    ],
    "val": Object {
      "dependencies": Array [
        "three",
      ],
      "determinedIncrementLevel": 2,
      "devDependencies": Array [],
      "devRelations": Array [],
      "hasBump": true,
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [
        Object {
          "affected": Array [
            "four",
          ],
          "body": "BREAKING CHANGE: text ",
          "level": 2,
          "scope": "four",
          "subject": "baz",
          "synchronizedSource": Array [
            "four",
          ],
          "type": "fix",
        },
      ],
      "relations": Array [],
    },
  },
  Object {
    "op": "update",
    "path": Array [
      "packages",
      "three",
      "version",
    ],
    "val": "5.0.0",
  },
  Object {
    "op": "update",
    "path": Array [
      "packages",
      "three",
      "dependencies",
      "four",
    ],
    "val": "^5.0.0",
  },
  Object {
    "op": "add",
    "path": Array [
      "packages",
      "three",
      "rlsr",
    ],
    "val": Object {
      "dependencies": Array [
        "four",
      ],
      "determinedIncrementLevel": 2,
      "devDependencies": Array [],
      "devRelations": Array [],
      "hasBump": true,
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [
        Object {
          "affected": Array [
            "four",
          ],
          "body": "BREAKING CHANGE: text ",
          "level": 2,
          "scope": "four",
          "subject": "baz",
          "synchronizedSource": Array [
            "four",
          ],
          "type": "fix",
        },
      ],
      "relations": Array [
        "two",
      ],
    },
  },
  Object {
    "op": "update",
    "path": Array [
      "packages",
      "four",
      "version",
    ],
    "val": "5.0.0",
  },
  Object {
    "op": "add",
    "path": Array [
      "packages",
      "four",
      "rlsr",
    ],
    "val": Object {
      "dependencies": Array [],
      "determinedIncrementLevel": 2,
      "devDependencies": Array [],
      "devRelations": Array [],
      "hasBump": true,
      "messages": Array [
        Object {
          "affected": Array [
            "four",
          ],
          "body": "BREAKING CHANGE: text ",
          "level": 2,
          "scope": "four",
          "subject": "baz",
          "type": "fix",
        },
      ],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [
        "one",
        "three",
      ],
    },
  },
  Object {
    "op": "update",
    "path": Array [
      "packages",
      "five",
      "version",
    ],
    "val": "5.0.0",
  },
  Object {
    "op": "add",
    "path": Array [
      "packages",
      "five",
      "rlsr",
    ],
    "val": Object {
      "dependencies": Array [],
      "determinedIncrementLevel": 2,
      "devDependencies": Array [],
      "devRelations": Array [],
      "hasBump": true,
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [
        Object {
          "affected": Array [
            "four",
          ],
          "body": "BREAKING CHANGE: text ",
          "level": 2,
          "scope": "four",
          "subject": "baz",
          "synchronizedSource": Array [
            "four",
          ],
          "type": "fix",
        },
      ],
      "relations": Array [
        "one",
      ],
    },
  },
  Object {
    "op": "add",
    "path": Array [
      "changelog",
      "5.0.0",
    ],
    "val": Object {
      "changes": Object {
        "five": Object {
          "determinedIncrementLevel": "major",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "BREAKING CHANGE: text ",
              "source": undefined,
              "subject": "fix: baz",
              "type": "dependency update",
            },
          ],
          "version": "5.0.0",
        },
        "four": Object {
          "determinedIncrementLevel": "major",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "BREAKING CHANGE: text ",
              "subject": "baz",
              "type": "fix",
            },
          ],
          "version": "5.0.0",
        },
        "one": Object {
          "determinedIncrementLevel": "major",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "BREAKING CHANGE: text ",
              "source": undefined,
              "subject": "fix: baz",
              "type": "dependency update",
            },
          ],
          "version": "5.0.0",
        },
        "three": Object {
          "determinedIncrementLevel": "major",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "BREAKING CHANGE: text ",
              "source": undefined,
              "subject": "fix: baz",
              "type": "dependency update",
            },
          ],
          "version": "5.0.0",
        },
        "two": Object {
          "determinedIncrementLevel": "major",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "BREAKING CHANGE: text ",
              "source": undefined,
              "subject": "fix: baz",
              "type": "dependency update",
            },
          ],
          "version": "5.0.0",
        },
      },
      "date": "Thu, 01 Jan 1970 00:00:00 GMT",
    },
  },
]
`;

exports[`large test: exact mode applies major then minor 1`] = `
Array [
  Object {
    "op": "update",
    "path": Array [
      "mainPackage",
      "version",
    ],
    "val": "5.0.0",
  },
  Object {
    "op": "add",
    "path": Array [
      "mainPackage",
      "rlsr",
      "previouslyUnreleased",
    ],
    "val": Array [
      "one",
      "two",
      "three",
      "four",
      "five",
    ],
  },
  Object {
    "op": "add",
    "path": Array [
      "mainPackage",
      "rlsr",
      "determinedIncrementLevel",
    ],
    "val": 2,
  },
  Object {
    "op": "add",
    "path": Array [
      "mainPackage",
      "rlsr",
      "shouldBeCommitted",
    ],
    "val": Array [],
  },
  Object {
    "op": "delete",
    "path": Array [
      "messages",
      0,
    ],
  },
  Object {
    "op": "update",
    "path": Array [
      "packages",
      "one",
      "version",
    ],
    "val": "5.0.0",
  },
  Object {
    "op": "update",
    "path": Array [
      "packages",
      "one",
      "dependencies",
      "four",
    ],
    "val": "^5.0.0",
  },
  Object {
    "op": "update",
    "path": Array [
      "packages",
      "one",
      "dependencies",
      "five",
    ],
    "val": "^5.0.0",
  },
  Object {
    "op": "add",
    "path": Array [
      "packages",
      "one",
      "rlsr",
    ],
    "val": Object {
      "dependencies": Array [
        "four",
        "five",
      ],
      "determinedIncrementLevel": 2,
      "devDependencies": Array [],
      "devRelations": Array [],
      "hasBump": true,
      "messages": Array [
        Object {
          "affected": Array [
            "one",
          ],
          "body": "BREAKING CHANGE: text ",
          "level": 2,
          "scope": "one",
          "subject": "raz",
          "type": "fix",
        },
      ],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [],
    },
  },
  Object {
    "op": "update",
    "path": Array [
      "packages",
      "two",
      "version",
    ],
    "val": "5.0.0",
  },
  Object {
    "op": "update",
    "path": Array [
      "packages",
      "two",
      "dependencies",
      "three",
    ],
    "val": "^5.0.0",
  },
  Object {
    "op": "add",
    "path": Array [
      "packages",
      "two",
      "rlsr",
    ],
    "val": Object {
      "dependencies": Array [
        "three",
      ],
      "determinedIncrementLevel": 2,
      "devDependencies": Array [],
      "devRelations": Array [],
      "hasBump": true,
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [
        Object {
          "affected": Array [
            "one",
          ],
          "body": "BREAKING CHANGE: text ",
          "level": 2,
          "scope": "one",
          "subject": "raz",
          "synchronizedSource": Array [
            "one",
          ],
          "type": "fix",
        },
      ],
      "relations": Array [],
    },
  },
  Object {
    "op": "update",
    "path": Array [
      "packages",
      "three",
      "version",
    ],
    "val": "5.0.0",
  },
  Object {
    "op": "update",
    "path": Array [
      "packages",
      "three",
      "dependencies",
      "four",
    ],
    "val": "^5.0.0",
  },
  Object {
    "op": "add",
    "path": Array [
      "packages",
      "three",
      "rlsr",
    ],
    "val": Object {
      "dependencies": Array [
        "four",
      ],
      "determinedIncrementLevel": 2,
      "devDependencies": Array [],
      "devRelations": Array [],
      "hasBump": true,
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [
        Object {
          "affected": Array [
            "one",
          ],
          "body": "BREAKING CHANGE: text ",
          "level": 2,
          "scope": "one",
          "subject": "raz",
          "synchronizedSource": Array [
            "one",
          ],
          "type": "fix",
        },
      ],
      "relations": Array [
        "two",
      ],
    },
  },
  Object {
    "op": "update",
    "path": Array [
      "packages",
      "four",
      "version",
    ],
    "val": "5.0.0",
  },
  Object {
    "op": "add",
    "path": Array [
      "packages",
      "four",
      "rlsr",
    ],
    "val": Object {
      "dependencies": Array [],
      "determinedIncrementLevel": 2,
      "devDependencies": Array [],
      "devRelations": Array [],
      "hasBump": true,
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [
        Object {
          "affected": Array [
            "one",
          ],
          "body": "BREAKING CHANGE: text ",
          "level": 2,
          "scope": "one",
          "subject": "raz",
          "synchronizedSource": Array [
            "one",
          ],
          "type": "fix",
        },
      ],
      "relations": Array [
        "one",
        "three",
      ],
    },
  },
  Object {
    "op": "update",
    "path": Array [
      "packages",
      "five",
      "version",
    ],
    "val": "5.0.0",
  },
  Object {
    "op": "add",
    "path": Array [
      "packages",
      "five",
      "rlsr",
    ],
    "val": Object {
      "dependencies": Array [],
      "determinedIncrementLevel": 2,
      "devDependencies": Array [],
      "devRelations": Array [],
      "hasBump": true,
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [
        Object {
          "affected": Array [
            "one",
          ],
          "body": "BREAKING CHANGE: text ",
          "level": 2,
          "scope": "one",
          "subject": "raz",
          "synchronizedSource": Array [
            "one",
          ],
          "type": "fix",
        },
      ],
      "relations": Array [
        "one",
      ],
    },
  },
  Object {
    "op": "add",
    "path": Array [
      "changelog",
      "5.0.0",
    ],
    "val": Object {
      "changes": Object {
        "five": Object {
          "determinedIncrementLevel": "major",
          "messages": Array [
            Object {
              "affected": Array [
                "one",
              ],
              "body": "BREAKING CHANGE: text ",
              "source": undefined,
              "subject": "fix: raz",
              "type": "dependency update",
            },
          ],
          "version": "5.0.0",
        },
        "four": Object {
          "determinedIncrementLevel": "major",
          "messages": Array [
            Object {
              "affected": Array [
                "one",
              ],
              "body": "BREAKING CHANGE: text ",
              "source": undefined,
              "subject": "fix: raz",
              "type": "dependency update",
            },
          ],
          "version": "5.0.0",
        },
        "one": Object {
          "determinedIncrementLevel": "major",
          "messages": Array [
            Object {
              "affected": Array [
                "one",
              ],
              "body": "BREAKING CHANGE: text ",
              "subject": "raz",
              "type": "fix",
            },
          ],
          "version": "5.0.0",
        },
        "three": Object {
          "determinedIncrementLevel": "major",
          "messages": Array [
            Object {
              "affected": Array [
                "one",
              ],
              "body": "BREAKING CHANGE: text ",
              "source": undefined,
              "subject": "fix: raz",
              "type": "dependency update",
            },
          ],
          "version": "5.0.0",
        },
        "two": Object {
          "determinedIncrementLevel": "major",
          "messages": Array [
            Object {
              "affected": Array [
                "one",
              ],
              "body": "BREAKING CHANGE: text ",
              "source": undefined,
              "subject": "fix: raz",
              "type": "dependency update",
            },
          ],
          "version": "5.0.0",
        },
      },
      "date": "Thu, 01 Jan 1970 00:00:00 GMT",
    },
  },
]
`;

exports[`large test: exact mode applies major then minor 2`] = `
Array [
  Object {
    "op": "update",
    "path": Array [
      "mainPackage",
      "rlsr",
      "determinedIncrementLevel",
    ],
    "val": -1,
  },
  Object {
    "op": "delete",
    "path": Array [
      "messages",
      0,
    ],
  },
  Object {
    "op": "update",
    "path": Array [
      "packages",
    ],
    "val": Object {
      "0": Object {
        "dependencies": Object {
          "five": "^5.0.0",
          "four": "^5.0.0",
        },
        "name": "one",
        "rlsr": Object {
          "dependencies": Array [],
          "determinedIncrementLevel": -1,
          "devDependencies": Array [],
          "devRelations": Array [],
          "hasBump": true,
          "messages": Array [],
          "peerDependencies": Array [],
          "peerRelations": Array [],
          "relatedMessages": Array [],
          "relations": Array [],
        },
        "version": "5.0.0",
      },
      "1": Object {
        "dependencies": Object {
          "three": "^5.0.0",
        },
        "name": "two",
        "rlsr": Object {
          "dependencies": Array [],
          "determinedIncrementLevel": -1,
          "devDependencies": Array [],
          "devRelations": Array [],
          "hasBump": true,
          "messages": Array [],
          "peerDependencies": Array [],
          "peerRelations": Array [],
          "relatedMessages": Array [],
          "relations": Array [],
        },
        "version": "5.0.0",
      },
      "2": Object {
        "dependencies": Object {
          "four": "^5.0.0",
        },
        "name": "three",
        "rlsr": Object {
          "dependencies": Array [],
          "determinedIncrementLevel": -1,
          "devDependencies": Array [],
          "devRelations": Array [],
          "hasBump": true,
          "messages": Array [],
          "peerDependencies": Array [],
          "peerRelations": Array [],
          "relatedMessages": Array [],
          "relations": Array [],
        },
        "version": "5.0.0",
      },
      "3": Object {
        "name": "four",
        "rlsr": Object {
          "dependencies": Array [],
          "determinedIncrementLevel": -1,
          "devDependencies": Array [],
          "devRelations": Array [],
          "hasBump": true,
          "messages": Array [],
          "peerDependencies": Array [],
          "peerRelations": Array [],
          "relatedMessages": Array [],
          "relations": Array [],
        },
        "version": "5.0.0",
      },
      "4": Object {
        "name": "five",
        "rlsr": Object {
          "dependencies": Array [],
          "determinedIncrementLevel": -1,
          "devDependencies": Array [],
          "devRelations": Array [],
          "hasBump": true,
          "messages": Array [],
          "peerDependencies": Array [],
          "peerRelations": Array [],
          "relatedMessages": Array [],
          "relations": Array [],
        },
        "version": "5.0.0",
      },
    },
  },
]
`;

exports[`large test: exact mode applies messages with multiple affected packages 1`] = `
Array [
  Object {
    "op": "update",
    "path": Array [
      "mainPackage",
      "version",
    ],
    "val": "1.9.0",
  },
  Object {
    "op": "add",
    "path": Array [
      "mainPackage",
      "rlsr",
      "previouslyUnreleased",
    ],
    "val": Array [
      "one",
      "two",
      "three",
    ],
  },
  Object {
    "op": "add",
    "path": Array [
      "mainPackage",
      "rlsr",
      "determinedIncrementLevel",
    ],
    "val": 1,
  },
  Object {
    "op": "add",
    "path": Array [
      "mainPackage",
      "rlsr",
      "shouldBeCommitted",
    ],
    "val": Array [],
  },
  Object {
    "op": "delete",
    "path": Array [
      "messages",
      0,
    ],
  },
  Object {
    "op": "delete",
    "path": Array [
      "messages",
      1,
    ],
  },
  Object {
    "op": "update",
    "path": Array [
      "packages",
      "one",
      "version",
    ],
    "val": "1.3.0",
  },
  Object {
    "op": "add",
    "path": Array [
      "packages",
      "one",
      "rlsr",
    ],
    "val": Object {
      "dependencies": Array [
        "four",
        "five",
      ],
      "determinedIncrementLevel": 1,
      "devDependencies": Array [],
      "devRelations": Array [],
      "hasBump": true,
      "messages": Array [
        Object {
          "affected": Array [
            "one",
          ],
          "body": "",
          "level": 1,
          "scope": "one",
          "subject": "waz",
          "type": "feat",
        },
      ],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [],
    },
  },
  Object {
    "op": "update",
    "path": Array [
      "packages",
      "two",
      "version",
    ],
    "val": "2.3.5",
  },
  Object {
    "op": "add",
    "path": Array [
      "packages",
      "two",
      "rlsr",
    ],
    "val": Object {
      "dependencies": Array [
        "three",
      ],
      "determinedIncrementLevel": 0,
      "devDependencies": Array [],
      "devRelations": Array [],
      "hasBump": true,
      "messages": Array [
        Object {
          "affected": Array [
            "two",
            "three",
          ],
          "body": "
",
          "level": 0,
          "scope": "one",
          "subject": "tar",
          "type": "fix",
        },
      ],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [],
    },
  },
  Object {
    "op": "update",
    "path": Array [
      "packages",
      "three",
      "version",
    ],
    "val": "3.4.6",
  },
  Object {
    "op": "add",
    "path": Array [
      "packages",
      "three",
      "rlsr",
    ],
    "val": Object {
      "dependencies": Array [
        "four",
      ],
      "determinedIncrementLevel": 0,
      "devDependencies": Array [],
      "devRelations": Array [],
      "hasBump": true,
      "messages": Array [
        Object {
          "affected": Array [
            "two",
            "three",
          ],
          "body": "
",
          "level": 0,
          "scope": "one",
          "subject": "tar",
          "type": "fix",
        },
      ],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [
        "two",
      ],
    },
  },
  Object {
    "op": "add",
    "path": Array [
      "packages",
      "four",
      "rlsr",
    ],
    "val": Object {
      "dependencies": Array [],
      "determinedIncrementLevel": -1,
      "devDependencies": Array [],
      "devRelations": Array [],
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [
        "one",
        "three",
      ],
    },
  },
  Object {
    "op": "add",
    "path": Array [
      "packages",
      "five",
      "rlsr",
    ],
    "val": Object {
      "dependencies": Array [],
      "determinedIncrementLevel": -1,
      "devDependencies": Array [],
      "devRelations": Array [],
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [
        "one",
      ],
    },
  },
  Object {
    "op": "add",
    "path": Array [
      "changelog",
      "1.9.0",
    ],
    "val": Object {
      "changes": Object {
        "one": Object {
          "determinedIncrementLevel": "minor",
          "messages": Array [
            Object {
              "affected": Array [
                "one",
              ],
              "body": "",
              "subject": "waz",
              "type": "feat",
            },
          ],
          "version": "1.3.0",
        },
        "three": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "two",
                "three",
              ],
              "body": "
",
              "subject": "tar",
              "type": "fix",
            },
          ],
          "version": "3.4.6",
        },
        "two": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "two",
                "three",
              ],
              "body": "
",
              "subject": "tar",
              "type": "fix",
            },
          ],
          "version": "2.3.5",
        },
      },
      "date": "Thu, 01 Jan 1970 00:00:00 GMT",
    },
  },
]
`;

exports[`large test: exact mode applies minor message 1`] = `
Array [
  Object {
    "op": "update",
    "path": Array [
      "mainPackage",
      "version",
    ],
    "val": "1.9.0",
  },
  Object {
    "op": "add",
    "path": Array [
      "mainPackage",
      "rlsr",
      "previouslyUnreleased",
    ],
    "val": Array [
      "three",
      "four",
    ],
  },
  Object {
    "op": "add",
    "path": Array [
      "mainPackage",
      "rlsr",
      "determinedIncrementLevel",
    ],
    "val": 1,
  },
  Object {
    "op": "add",
    "path": Array [
      "mainPackage",
      "rlsr",
      "shouldBeCommitted",
    ],
    "val": Array [],
  },
  Object {
    "op": "delete",
    "path": Array [
      "messages",
      0,
    ],
  },
  Object {
    "op": "add",
    "path": Array [
      "packages",
      "one",
      "rlsr",
    ],
    "val": Object {
      "dependencies": Array [
        "four",
        "five",
      ],
      "determinedIncrementLevel": -1,
      "devDependencies": Array [],
      "devRelations": Array [],
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [],
    },
  },
  Object {
    "op": "add",
    "path": Array [
      "packages",
      "two",
      "rlsr",
    ],
    "val": Object {
      "dependencies": Array [
        "three",
      ],
      "determinedIncrementLevel": -1,
      "devDependencies": Array [],
      "devRelations": Array [],
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [],
    },
  },
  Object {
    "op": "update",
    "path": Array [
      "packages",
      "three",
      "version",
    ],
    "val": "3.4.6",
  },
  Object {
    "op": "update",
    "path": Array [
      "packages",
      "three",
      "dependencies",
      "four",
    ],
    "val": "^4",
  },
  Object {
    "op": "add",
    "path": Array [
      "packages",
      "three",
      "rlsr",
    ],
    "val": Object {
      "dependencies": Array [
        "four",
      ],
      "determinedIncrementLevel": 0,
      "devDependencies": Array [],
      "devRelations": Array [],
      "hasBump": true,
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [
        Object {
          "affected": Array [
            "four",
          ],
          "body": "",
          "dependencyType": "dependencies",
          "level": 1,
          "package": "four",
          "scope": "four",
          "subject": "bar",
          "type": "feat",
          "version": "4.6.0",
        },
      ],
      "relations": Array [
        "two",
      ],
    },
  },
  Object {
    "op": "update",
    "path": Array [
      "packages",
      "four",
      "version",
    ],
    "val": "4.6.0",
  },
  Object {
    "op": "add",
    "path": Array [
      "packages",
      "four",
      "rlsr",
    ],
    "val": Object {
      "dependencies": Array [],
      "determinedIncrementLevel": 1,
      "devDependencies": Array [],
      "devRelations": Array [],
      "hasBump": true,
      "messages": Array [
        Object {
          "affected": Array [
            "four",
          ],
          "body": "",
          "level": 1,
          "scope": "four",
          "subject": "bar",
          "type": "feat",
        },
      ],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [
        "one",
        "three",
      ],
    },
  },
  Object {
    "op": "add",
    "path": Array [
      "packages",
      "five",
      "rlsr",
    ],
    "val": Object {
      "dependencies": Array [],
      "determinedIncrementLevel": -1,
      "devDependencies": Array [],
      "devRelations": Array [],
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [
        "one",
      ],
    },
  },
  Object {
    "op": "add",
    "path": Array [
      "changelog",
      "1.9.0",
    ],
    "val": Object {
      "changes": Object {
        "four": Object {
          "determinedIncrementLevel": "minor",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "",
              "subject": "bar",
              "type": "feat",
            },
          ],
          "version": "4.6.0",
        },
        "three": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "",
              "source": undefined,
              "subject": "feat: bar",
              "type": "dependency update",
            },
          ],
          "version": "3.4.6",
        },
      },
      "date": "Thu, 01 Jan 1970 00:00:00 GMT",
    },
  },
]
`;

exports[`large test: exact mode applies minor then major 1`] = `
Array [
  Object {
    "op": "update",
    "path": Array [
      "mainPackage",
      "version",
    ],
    "val": "1.9.0",
  },
  Object {
    "op": "add",
    "path": Array [
      "mainPackage",
      "rlsr",
      "previouslyUnreleased",
    ],
    "val": Array [
      "one",
    ],
  },
  Object {
    "op": "add",
    "path": Array [
      "mainPackage",
      "rlsr",
      "determinedIncrementLevel",
    ],
    "val": 1,
  },
  Object {
    "op": "add",
    "path": Array [
      "mainPackage",
      "rlsr",
      "shouldBeCommitted",
    ],
    "val": Array [],
  },
  Object {
    "op": "delete",
    "path": Array [
      "messages",
      0,
    ],
  },
  Object {
    "op": "update",
    "path": Array [
      "packages",
      "one",
      "version",
    ],
    "val": "1.3.0",
  },
  Object {
    "op": "add",
    "path": Array [
      "packages",
      "one",
      "rlsr",
    ],
    "val": Object {
      "dependencies": Array [
        "four",
        "five",
      ],
      "determinedIncrementLevel": 1,
      "devDependencies": Array [],
      "devRelations": Array [],
      "hasBump": true,
      "messages": Array [
        Object {
          "affected": Array [
            "one",
          ],
          "body": "",
          "level": 1,
          "scope": "one",
          "subject": "raz",
          "type": "feat",
        },
      ],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [],
    },
  },
  Object {
    "op": "add",
    "path": Array [
      "packages",
      "two",
      "rlsr",
    ],
    "val": Object {
      "dependencies": Array [
        "three",
      ],
      "determinedIncrementLevel": -1,
      "devDependencies": Array [],
      "devRelations": Array [],
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [],
    },
  },
  Object {
    "op": "add",
    "path": Array [
      "packages",
      "three",
      "rlsr",
    ],
    "val": Object {
      "dependencies": Array [
        "four",
      ],
      "determinedIncrementLevel": -1,
      "devDependencies": Array [],
      "devRelations": Array [],
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [
        "two",
      ],
    },
  },
  Object {
    "op": "add",
    "path": Array [
      "packages",
      "four",
      "rlsr",
    ],
    "val": Object {
      "dependencies": Array [],
      "determinedIncrementLevel": -1,
      "devDependencies": Array [],
      "devRelations": Array [],
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [
        "one",
        "three",
      ],
    },
  },
  Object {
    "op": "add",
    "path": Array [
      "packages",
      "five",
      "rlsr",
    ],
    "val": Object {
      "dependencies": Array [],
      "determinedIncrementLevel": -1,
      "devDependencies": Array [],
      "devRelations": Array [],
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [
        "one",
      ],
    },
  },
  Object {
    "op": "add",
    "path": Array [
      "changelog",
      "1.9.0",
    ],
    "val": Object {
      "changes": Object {
        "one": Object {
          "determinedIncrementLevel": "minor",
          "messages": Array [
            Object {
              "affected": Array [
                "one",
              ],
              "body": "",
              "subject": "raz",
              "type": "feat",
            },
          ],
          "version": "1.3.0",
        },
      },
      "date": "Thu, 01 Jan 1970 00:00:00 GMT",
    },
  },
]
`;

exports[`large test: exact mode applies minor then major 2`] = `
Array [
  Object {
    "op": "update",
    "path": Array [
      "mainPackage",
      "rlsr",
      "determinedIncrementLevel",
    ],
    "val": -1,
  },
  Object {
    "op": "delete",
    "path": Array [
      "messages",
      0,
    ],
  },
  Object {
    "op": "update",
    "path": Array [
      "packages",
    ],
    "val": Object {
      "0": Object {
        "dependencies": Object {
          "five": "^4.5.0",
          "four": "^4.5.0",
        },
        "name": "one",
        "rlsr": Object {
          "dependencies": Array [],
          "determinedIncrementLevel": -1,
          "devDependencies": Array [],
          "devRelations": Array [],
          "hasBump": true,
          "messages": Array [],
          "peerDependencies": Array [],
          "peerRelations": Array [],
          "relatedMessages": Array [],
          "relations": Array [],
        },
        "version": "1.3.0",
      },
      "1": Object {
        "dependencies": Object {
          "three": "2.3.4 - 3",
        },
        "name": "two",
        "rlsr": Object {
          "dependencies": Array [],
          "determinedIncrementLevel": -1,
          "devDependencies": Array [],
          "devRelations": Array [],
          "messages": Array [],
          "peerDependencies": Array [],
          "peerRelations": Array [],
          "relatedMessages": Array [],
          "relations": Array [],
        },
        "version": "2.3.4",
      },
      "2": Object {
        "dependencies": Object {
          "four": "4.0.0 - 4.5.6",
        },
        "name": "three",
        "rlsr": Object {
          "dependencies": Array [],
          "determinedIncrementLevel": -1,
          "devDependencies": Array [],
          "devRelations": Array [],
          "messages": Array [],
          "peerDependencies": Array [],
          "peerRelations": Array [],
          "relatedMessages": Array [],
          "relations": Array [],
        },
        "version": "3.4.5",
      },
      "3": Object {
        "name": "four",
        "rlsr": Object {
          "dependencies": Array [],
          "determinedIncrementLevel": -1,
          "devDependencies": Array [],
          "devRelations": Array [],
          "messages": Array [],
          "peerDependencies": Array [],
          "peerRelations": Array [],
          "relatedMessages": Array [],
          "relations": Array [],
        },
        "version": "4.5.6",
      },
      "4": Object {
        "name": "five",
        "rlsr": Object {
          "dependencies": Array [],
          "determinedIncrementLevel": -1,
          "devDependencies": Array [],
          "devRelations": Array [],
          "messages": Array [],
          "peerDependencies": Array [],
          "peerRelations": Array [],
          "relatedMessages": Array [],
          "relations": Array [],
        },
        "version": "4.5.6",
      },
    },
  },
]
`;

exports[`large test: exact mode applies patch message 1`] = `
Array [
  Object {
    "op": "update",
    "path": Array [
      "mainPackage",
      "version",
    ],
    "val": "1.8.6",
  },
  Object {
    "op": "add",
    "path": Array [
      "mainPackage",
      "rlsr",
      "previouslyUnreleased",
    ],
    "val": Array [
      "three",
      "four",
    ],
  },
  Object {
    "op": "add",
    "path": Array [
      "mainPackage",
      "rlsr",
      "determinedIncrementLevel",
    ],
    "val": 0,
  },
  Object {
    "op": "add",
    "path": Array [
      "mainPackage",
      "rlsr",
      "shouldBeCommitted",
    ],
    "val": Array [],
  },
  Object {
    "op": "delete",
    "path": Array [
      "messages",
      0,
    ],
  },
  Object {
    "op": "add",
    "path": Array [
      "packages",
      "one",
      "rlsr",
    ],
    "val": Object {
      "dependencies": Array [
        "four",
        "five",
      ],
      "determinedIncrementLevel": -1,
      "devDependencies": Array [],
      "devRelations": Array [],
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [],
    },
  },
  Object {
    "op": "add",
    "path": Array [
      "packages",
      "two",
      "rlsr",
    ],
    "val": Object {
      "dependencies": Array [
        "three",
      ],
      "determinedIncrementLevel": -1,
      "devDependencies": Array [],
      "devRelations": Array [],
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [],
    },
  },
  Object {
    "op": "update",
    "path": Array [
      "packages",
      "three",
      "version",
    ],
    "val": "3.4.6",
  },
  Object {
    "op": "update",
    "path": Array [
      "packages",
      "three",
      "dependencies",
      "four",
    ],
    "val": "^4",
  },
  Object {
    "op": "add",
    "path": Array [
      "packages",
      "three",
      "rlsr",
    ],
    "val": Object {
      "dependencies": Array [
        "four",
      ],
      "determinedIncrementLevel": 0,
      "devDependencies": Array [],
      "devRelations": Array [],
      "hasBump": true,
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [
        Object {
          "affected": Array [
            "four",
          ],
          "body": "",
          "dependencyType": "dependencies",
          "level": 0,
          "package": "four",
          "scope": "four",
          "subject": "foo",
          "type": "fix",
          "version": "4.5.7",
        },
      ],
      "relations": Array [
        "two",
      ],
    },
  },
  Object {
    "op": "update",
    "path": Array [
      "packages",
      "four",
      "version",
    ],
    "val": "4.5.7",
  },
  Object {
    "op": "add",
    "path": Array [
      "packages",
      "four",
      "rlsr",
    ],
    "val": Object {
      "dependencies": Array [],
      "determinedIncrementLevel": 0,
      "devDependencies": Array [],
      "devRelations": Array [],
      "hasBump": true,
      "messages": Array [
        Object {
          "affected": Array [
            "four",
          ],
          "body": "",
          "level": 0,
          "scope": "four",
          "subject": "foo",
          "type": "fix",
        },
      ],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [
        "one",
        "three",
      ],
    },
  },
  Object {
    "op": "add",
    "path": Array [
      "packages",
      "five",
      "rlsr",
    ],
    "val": Object {
      "dependencies": Array [],
      "determinedIncrementLevel": -1,
      "devDependencies": Array [],
      "devRelations": Array [],
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [
        "one",
      ],
    },
  },
  Object {
    "op": "add",
    "path": Array [
      "changelog",
      "1.8.6",
    ],
    "val": Object {
      "changes": Object {
        "four": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "",
              "subject": "foo",
              "type": "fix",
            },
          ],
          "version": "4.5.7",
        },
        "three": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "",
              "source": undefined,
              "subject": "fix: foo",
              "type": "dependency update",
            },
          ],
          "version": "3.4.6",
        },
      },
      "date": "Thu, 01 Jan 1970 00:00:00 GMT",
    },
  },
]
`;

exports[`large test: exact mode applies several messages with one breaking change 1`] = `
Array [
  Object {
    "op": "update",
    "path": Array [
      "mainPackage",
      "version",
    ],
    "val": "5.0.0",
  },
  Object {
    "op": "add",
    "path": Array [
      "mainPackage",
      "rlsr",
      "previouslyUnreleased",
    ],
    "val": Array [
      "one",
      "two",
      "three",
      "four",
      "five",
    ],
  },
  Object {
    "op": "add",
    "path": Array [
      "mainPackage",
      "rlsr",
      "determinedIncrementLevel",
    ],
    "val": 2,
  },
  Object {
    "op": "add",
    "path": Array [
      "mainPackage",
      "rlsr",
      "shouldBeCommitted",
    ],
    "val": Array [],
  },
  Object {
    "op": "delete",
    "path": Array [
      "messages",
      0,
    ],
  },
  Object {
    "op": "delete",
    "path": Array [
      "messages",
      1,
    ],
  },
  Object {
    "op": "delete",
    "path": Array [
      "messages",
      2,
    ],
  },
  Object {
    "op": "update",
    "path": Array [
      "packages",
      "one",
      "version",
    ],
    "val": "5.0.0",
  },
  Object {
    "op": "update",
    "path": Array [
      "packages",
      "one",
      "dependencies",
      "four",
    ],
    "val": "^5.0.0",
  },
  Object {
    "op": "update",
    "path": Array [
      "packages",
      "one",
      "dependencies",
      "five",
    ],
    "val": "^5.0.0",
  },
  Object {
    "op": "add",
    "path": Array [
      "packages",
      "one",
      "rlsr",
    ],
    "val": Object {
      "dependencies": Array [
        "four",
        "five",
      ],
      "determinedIncrementLevel": 2,
      "devDependencies": Array [],
      "devRelations": Array [],
      "hasBump": true,
      "messages": Array [
        Object {
          "affected": Array [
            "one",
          ],
          "body": "",
          "level": 0,
          "scope": "one",
          "subject": "raz",
          "type": "fix",
        },
      ],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [
        Object {
          "affected": Array [
            "four",
          ],
          "body": "BREAKING CHANGE: text ",
          "level": 2,
          "scope": "four",
          "subject": "taz",
          "synchronizedSource": Array [
            "four",
          ],
          "type": "fix",
        },
      ],
      "relations": Array [],
    },
  },
  Object {
    "op": "update",
    "path": Array [
      "packages",
      "two",
      "version",
    ],
    "val": "5.0.0",
  },
  Object {
    "op": "update",
    "path": Array [
      "packages",
      "two",
      "dependencies",
      "three",
    ],
    "val": "^5.0.0",
  },
  Object {
    "op": "add",
    "path": Array [
      "packages",
      "two",
      "rlsr",
    ],
    "val": Object {
      "dependencies": Array [
        "three",
      ],
      "determinedIncrementLevel": 2,
      "devDependencies": Array [],
      "devRelations": Array [],
      "hasBump": true,
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [
        Object {
          "affected": Array [
            "four",
          ],
          "body": "BREAKING CHANGE: text ",
          "level": 2,
          "scope": "four",
          "subject": "taz",
          "synchronizedSource": Array [
            "four",
          ],
          "type": "fix",
        },
      ],
      "relations": Array [],
    },
  },
  Object {
    "op": "update",
    "path": Array [
      "packages",
      "three",
      "version",
    ],
    "val": "5.0.0",
  },
  Object {
    "op": "update",
    "path": Array [
      "packages",
      "three",
      "dependencies",
      "four",
    ],
    "val": "^5.0.0",
  },
  Object {
    "op": "add",
    "path": Array [
      "packages",
      "three",
      "rlsr",
    ],
    "val": Object {
      "dependencies": Array [
        "four",
      ],
      "determinedIncrementLevel": 2,
      "devDependencies": Array [],
      "devRelations": Array [],
      "hasBump": true,
      "messages": Array [
        Object {
          "affected": Array [
            "three",
          ],
          "body": "",
          "level": 0,
          "scope": "three",
          "subject": "roo",
          "type": "fix",
        },
      ],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [
        Object {
          "affected": Array [
            "four",
          ],
          "body": "BREAKING CHANGE: text ",
          "level": 2,
          "scope": "four",
          "subject": "taz",
          "synchronizedSource": Array [
            "four",
          ],
          "type": "fix",
        },
      ],
      "relations": Array [
        "two",
      ],
    },
  },
  Object {
    "op": "update",
    "path": Array [
      "packages",
      "four",
      "version",
    ],
    "val": "5.0.0",
  },
  Object {
    "op": "add",
    "path": Array [
      "packages",
      "four",
      "rlsr",
    ],
    "val": Object {
      "dependencies": Array [],
      "determinedIncrementLevel": 2,
      "devDependencies": Array [],
      "devRelations": Array [],
      "hasBump": true,
      "messages": Array [
        Object {
          "affected": Array [
            "four",
          ],
          "body": "BREAKING CHANGE: text ",
          "level": 2,
          "scope": "four",
          "subject": "taz",
          "type": "fix",
        },
      ],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [
        "one",
        "three",
      ],
    },
  },
  Object {
    "op": "update",
    "path": Array [
      "packages",
      "five",
      "version",
    ],
    "val": "5.0.0",
  },
  Object {
    "op": "add",
    "path": Array [
      "packages",
      "five",
      "rlsr",
    ],
    "val": Object {
      "dependencies": Array [],
      "determinedIncrementLevel": 2,
      "devDependencies": Array [],
      "devRelations": Array [],
      "hasBump": true,
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [
        Object {
          "affected": Array [
            "four",
          ],
          "body": "BREAKING CHANGE: text ",
          "level": 2,
          "scope": "four",
          "subject": "taz",
          "synchronizedSource": Array [
            "four",
          ],
          "type": "fix",
        },
      ],
      "relations": Array [
        "one",
      ],
    },
  },
  Object {
    "op": "add",
    "path": Array [
      "changelog",
      "5.0.0",
    ],
    "val": Object {
      "changes": Object {
        "five": Object {
          "determinedIncrementLevel": "major",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "BREAKING CHANGE: text ",
              "source": undefined,
              "subject": "fix: taz",
              "type": "dependency update",
            },
          ],
          "version": "5.0.0",
        },
        "four": Object {
          "determinedIncrementLevel": "major",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "BREAKING CHANGE: text ",
              "subject": "taz",
              "type": "fix",
            },
          ],
          "version": "5.0.0",
        },
        "one": Object {
          "determinedIncrementLevel": "major",
          "messages": Array [
            Object {
              "affected": Array [
                "one",
              ],
              "body": "",
              "subject": "raz",
              "type": "fix",
            },
            Object {
              "affected": Array [
                "four",
              ],
              "body": "BREAKING CHANGE: text ",
              "source": undefined,
              "subject": "fix: taz",
              "type": "dependency update",
            },
          ],
          "version": "5.0.0",
        },
        "three": Object {
          "determinedIncrementLevel": "major",
          "messages": Array [
            Object {
              "affected": Array [
                "three",
              ],
              "body": "",
              "subject": "roo",
              "type": "fix",
            },
            Object {
              "affected": Array [
                "four",
              ],
              "body": "BREAKING CHANGE: text ",
              "source": undefined,
              "subject": "fix: taz",
              "type": "dependency update",
            },
          ],
          "version": "5.0.0",
        },
        "two": Object {
          "determinedIncrementLevel": "major",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "BREAKING CHANGE: text ",
              "source": undefined,
              "subject": "fix: taz",
              "type": "dependency update",
            },
          ],
          "version": "5.0.0",
        },
      },
      "date": "Thu, 01 Jan 1970 00:00:00 GMT",
    },
  },
]
`;
